--- a/htmls/gopaste.html
+++ b/htmls/gopaste.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset='UTF-8'>
     <title>PasteCan, for Go</title>
-    <link rel="stylesheet" type="text/css" href="/styles/front.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/front.css" />
 </head>
 <body>
     <form action="/savego/{{.Title}}" method="POST">
