--- a/htmls/paste.html
+++ b/htmls/paste.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='UTF-8'>
     <title>PasteCan</title>
-    <link rel="stylesheet" type="text/css" href="/styles/front.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/front.css" />
 </head>
 <body>
     <form action="/save/{{.Title}}" method="POST">
